# Steam-Library-Manager

./: .gitignore  LICENSE  README.md  pyproject.toml
steamlib/: __init__.py  actions.py  cache.py  cli.py  config.py  local_steam.py  matcher.py  models.py  steam_api.py  steam_identity.py  tui.py
tests/: test_actions.py  test_cache.py  test_cli_install.py  test_local_steam.py  test_matcher.py  test_steam_identity.py
